--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port = 8080
 spring.datasource.url =jdbc:mysql://localhost:3306/courses?useSSL=false
 spring.datasource.username =root
-spring.datasource.password =4four22
+spring.datasource.password =root
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 #hibernate config
